adjustment application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,26 +1,28 @@
-server:
-  port: ${PORT:8080}
-
 spring:
-  application:
-    name: order-management-service
+    application:
+        name: order-management-service
 
-  datasource:
-    url: jdbc:${DATABASE_URL}
-    driver-class-name: org.postgresql.Driver
+    datasource:
+        url: jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+        username: ${PGUSER}
+        password: ${PGPASSWORD}
+        driver-class-name: org.postgresql.Driver
 
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: false
-    open-in-view: false
-    properties:
-      hibernate:
-        format_sql: true
+    jpa:
+        hibernate:
+            ddl-auto: update
+        open-in-view: false
+        show-sql: false
+        properties:
+            hibernate:
+                dialect: org.hibernate.dialect.PostgreSQLDialect
+
+server:
+    port: ${PORT:8080}
 
 jwt:
-  secret: ${JWT_SECRET}
-  access-token:
-    expiration-ms: 900000
-  refresh-token:
-    expiration-ms: 604800000
+    secret: ${JWT_SECRET:THIS_IS_A_VERY_LONG_SECRET_KEY_AT_LEAST_256_BITS}
+    access-token:
+        expiration-ms: 900000
+    refresh-token:
+        expiration-ms: 604800000
